[package]
name = "halo2-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example1"
path = "src/example1.rs"

[[bin]]
name = "example2"
path = "src/example2.rs"

[[bin]]
name = "example3"
path = "src/example3.rs"

[[bin]]
name = "example4"
path = "src/example4.rs"

[[bin]]
name = "simple_example"
path = "src/simple_example.rs"

[[bin]]
name = "sort"
path = "src/sort.rs"

[[bin]]
name = "test0"
path = "src/test0.rs"

[[bin]]
name = "test1"
path = "src/test1.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "fibodynamic"
path = "src/fibodynamic.rs"


[dependencies]
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", tag = "v2022_03_06" }
pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
ff =  "0.11"
rand_core = { version = "0.6", default-features = false }
